--- a/спецификация.tex
+++ b/спецификация.tex
@@ -283,13 +283,15 @@ false
 
 for
 
-full1
+full8
 
-full3
+full16
 
-full5
+full32
 
-full7
+full64
+
+full128
 
 good
 
@@ -299,13 +301,13 @@ If
 
 log
 
-log1
+log8
 
-log3
+log16
 
-log5
+log32
 
-log7
+log64
 
 main
 
@@ -315,21 +317,12 @@ number
 
 perem
 
-question
-
-question2
-
-question4
-
-question4
 
 small
 
 summ
 
 sign
-
-square
 
 string
 
@@ -489,8 +482,8 @@ Zero
 \begin{center}
 \noindent\textcolor{Green}{\syntax{[\{\textcolor{Black}{\textbf{big}}\}/\{\textcolor{Black}{\textbf{small}}\}]}\textcolor{Black}{\textbf{log}} }\end{center}
 
-Имеются логические типы конкретных размеров, а именно, типы \textbf{log1}, \textbf{log3},
-\textbf{log5}, \textbf{log7}, переменные которых имеют размер в 1, 2, 4 и 8 байт соответственно.
+Имеются логические типы конкретных размеров, а именно, типы \textbf{log8}, \textbf{log16},
+\textbf{log32}, \textbf{log64}, переменные которых имеют размер в 1, 2, 4 и 8 байт соответственно.
 
 Над логическими значениями определены следующие операции:
 \begin{longtable}{ll}
@@ -565,8 +558,8 @@ Zero
             \paragraph{Целочисленные типы.}Переменные целочисленных типов предназначены для хранения целых чисел. Целочисленный тип выглядит так:
 \begin{center}
 \noindent\textcolor{Green}{\syntax{[\{\textcolor{Black}{\textbf{big}}\}/\{\textcolor{Black}{\textbf{small}}\}]}\textcolor{Black}{\textbf{full}} }\end{center}
-Имеются логические типы конкретных размеров, а именно, типы \textbf{full1}, \textbf{full3},
-\textbf{full5}, \textbf{full7}.
+Имеются логические типы конкретных размеров, а именно, типы \textbf{full8}, \textbf{full16},
+\textbf{full32}, \textbf{full64}, \textbf{full128}.
 
 Допустимые операции:
 \begin{longtable}{ll}
